[package]
name = "webro-graphics"
version = "0.1.0"
authors = ["KorieDrakeChaney"]
edition = "2021"


[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
webro-assets = {path = "../webro-assets", version = "~0.1.0", default-features = false}
webro-math = {path = "../webro-math", version = "~0.1.0", default-features = false}
webro-colors = {path = "../webro-colors", version = "~0.1.0", default-features = false}
webro-logging = {path = "../webro-logging", version = "~0.1.0", default-features = false}

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Document',
  'Element',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'HtmlCanvasElement', 
  'HtmlImageElement', 
  'WebGlTexture',
  'HtmlElement',
  'Node',
  'Window'
]
